--- a/index.html
+++ b/index.html
@@ -1,1 +1,90 @@
-Hello World
+<!DOCTYPE html>
+<html>
+    <head>
+        <style>
+            body { background-color: #e5e4e2; }
+            h2 { border-width: medium; border-style: ridge; }
+            .about { color: #035096; }
+            .interests { color: #006400; }
+            .projects { color: #c21e56; }
+            .ta { color: #daa520; }
+            .funstuff { color : #551a8b; }
+        </style>
+
+        <meta charset="utf-8">
+        <title>Carl's Homepage</title>
+    </head>
+
+    <body>
+        <h2 class="about">About Me</h2>
+        <p>
+            I am a 3rd year Computer Science student and teaching assistant at
+            the University of Toronto, Mississauga campus. My interest lies in
+            computer systems, mainly processor architecture, operating systems,
+            and parallel programming.
+            <br/><br/>
+            I am currently taking classes in software engineering and web
+            programming, and I will be using this website to practice the things
+            that I will be learning in both classes this semester. The website
+            will look wonky, but please bear with me.
+        </p>
+
+        <h2 class="interests">Hobbies and Interests</h2>
+        <ul>
+            <li>Activities: Biking</li>
+            <li>Food: Burrito, Korean BBQ, Poutine, Samosa, Sushi</li>
+            <li>Music: K-pop, J-pop, Classic Rock, Modern Pop</li>
+            <li>Video Games: GTA San Andreas, Kerbal Space Program, TIS-100</li>
+        </ul>
+
+        <h2 class="projects">Projects</h2>
+        <ul>
+            <li>
+                <a href="https://github.com/cmqten/crp16">CRP16</a> :
+                A 16-bit processor implemented on an FPGA using Verilog.
+                Includes an assembler written in Python 3.6.
+            </li>
+
+            <li>
+                <a href="https://github.com/cmqten/electromagnet-crane-toy">
+                    Electromagnet Crane Toy
+                </a> :
+                A small electromagnet crane created with an Arduino Uno. Uses a
+                PS3 controller for control.
+            </li>
+
+            <li>
+                <a href="https://github.com/cmqten/coolpenguin">
+                    Penguin Plains
+                </a> :
+                A game that involves shooting penguins (in a friendly way) with
+                fish or ice cream. Written in C++.
+            </li>
+        </ul>
+
+        <h2 class="ta">Teaching Assistant Work</h2>
+        <p>
+            As mentioned above, I also work as a teaching assistant on top of
+            taking classes. The following are the classes for which I have
+            worked or currently working as a teaching assistant.
+        </p>
+
+        <ul>
+            <li>
+                CSC258 - Computer Organization, UTM Winter 2018
+            </li>
+            <li>
+                CSC108 - Introduction to Computer Programming, UTM Fall 2017
+            </li>
+        </ul>
+
+        <h2 class="funstuff">Fun Stuff</h2>
+        <button id="clickme">Click Me!</button>
+        <p class="out"></p>
+        
+        <!-- TODO: Javascript to be executes when button is pressed -->
+        <script>
+
+        </script>
+    </body>
+</html>
