--- a/index.html
+++ b/index.html
@@ -7,69 +7,81 @@
     </head>
 
     <body>
-        <h1 id="name" >Carl Marquez</h1>
-        <h2 id="about" class="section_header">About Me</h2>
-        <p>
-            I am a 3rd year Computer Science student and teaching assistant at
-            the University of Toronto, Mississauga campus. My interest lies in
-            computer systems, mainly processor architecture, operating systems,
-            and parallel programming.
-            <br/><br/>
-            I am currently taking classes in software engineering and web
-            programming, and I will be using this website to practice the things
-            that I will be learning in both classes this semester. The website
-            will look wonky, but please bear with me.
-        </p>
+        <h1 id="name">Carl Marquez</h1>
+        <div id="links" class="section">
+            <a href="https://github.com/cmqten">Github</a>
+            &nbsp;
+            <a href="https://www.linkedin.com/in/carlmarquez/">LinkedIn</a>
+        </div>
 
-        <h2 id="interests" class="section_header">Hobbies and Interests</h2>
-        <ul>
-            <li>Activities: Biking</li>
-            <li>Food: Burrito, Korean BBQ, Poutine, Samosa, Sushi</li>
-            <li>Music: K-pop, J-pop, Classic Rock, Modern Pop</li>
-            <li>Video Games: GTA San Andreas, Kerbal Space Program, TIS-100</li>
-        </ul>
+        <div class="about section">
+            <h2 id="about_header" class="header">About Me</h2>
+            <p>
+                I am a 3rd year Computer Science student and teaching assistant
+                at the University of Toronto, Mississauga campus. My interest
+                lies in computer systems, mainly processor architecture,
+                operating systems, and parallel programming.
+                <br/><br/>
+                I am currently taking classes in software engineering and web
+                programming, and I will be using this website to practice the
+                things that I will be learning in both classes this semester.
+                The website will look wonky, but please bear with me.
+            </p>
+        </div>
 
-        <h2 id="projects" class="section_header">Projects</h2>
-        <ul>
-            <li>
-                <a href="https://github.com/cmqten/crp16">CRP16</a> :
-                A 16-bit processor implemented on an FPGA using Verilog.
-                Includes an assembler written in Python 3.6.
-            </li>
+        <div class="interests section">
+            <h2 id="interests_header" class="header">Hobbies and Interests</h2>
+            <ul>
+                <li>Activities : Biking</li>
+                <li>Food : Burrito, Korean BBQ, Poutine, Samosa, Sushi</li>
+                <li>Music : K-pop, J-pop, Classic Rock, Modern Pop</li>
+                <li>Video Games : GTA San Andreas, Kerbal Space Program,
+                    TIS-100</li>
+            </ul>
+        </div>
 
-            <li>
-                <a href="https://github.com/cmqten/electromagnet-crane-toy">
-                    Electromagnet Crane Toy
-                </a> :
-                A small electromagnet crane created with an Arduino Uno. Uses a
-                PS3 controller for control.
-            </li>
+        <div class="projects section">
+            <h2 id="projects_header" class="header">Projects</h2>
+            <ul>
+                <li>
+                    <a href="https://github.com/cmqten/crp16">CRP16</a> :
+                    A 16-bit RISC processor implemented on an FPGA using
+                    Verilog. Includes an assembler written in Python 3.6.
+                </li>
 
-            <li>
-                <a href="https://github.com/cmqten/coolpenguin">
-                    Penguin Plains
-                </a> :
-                A game that involves shooting penguins (in a friendly way) with
-                fish or ice cream. Written in C++.
-            </li>
-        </ul>
+                <li>
+                    <a href="https://github.com/cmqten/electromagnet-crane-toy">
+                        Electromagnet Crane Toy</a> :
+                    A small electromagnet crane created with an Arduino Uno.
+                    Uses a PS3 controller for control.
+                </li>
 
-        <h2 id="ta" class="section_header">Teaching Assistant Work</h2>
-        <p>
-            As mentioned above, I also work as a teaching assistant on top of
-            taking classes. The following are the classes for which I have
-            worked or currently working as a teaching assistant.
-        </p>
+                <li>
+                    <a href="https://github.com/cmqten/coolpenguin">
+                        Penguin Plains</a> :
+                    A game that involves shooting penguins (in a friendly way)
+                    with fish or ice cream. Written in C++.
+                </li>
+            </ul>
+        </div>
 
-        <ul>
-            <li>
-                CSC258 - Computer Organization, UTM Winter 2018
-            </li>
-            <li>
-                CSC108 - Introduction to Computer Programming, UTM Fall 2017
-            </li>
-        </ul>
+        <div class="ta section">
+            <h2 id="ta_header" class="header">Teaching Assistant Work</h2>
+            <p>
+                As mentioned above, I also work as a teaching assistant on top
+                of taking classes. The following are the classes for which I
+                have worked or currently working as a teaching assistant.
+            </p>
 
-        <h2 id="funstuff" class="section_header">Fun Stuff</h2>
+            <ul>
+                <li>CSC258 - Computer Organization, UTM Winter 2018</li>
+                <li>CSC108 - Introduction to Computer Programming,
+                    UTM Fall 2017</li>
+            </ul>
+        </div>
+
+        <div class="funstuff section">
+            <h2 id="funstuff_header" class="header">Fun Stuff</h2>
+        </div>
     </body>
 </html>
