Added mobile device

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <link rel="stylesheet" href="style.css">
         <meta charset="utf-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+        <link rel="stylesheet" href="styles.css">
         <title>Carl's Homepage</title>
     </head>
 
     <body>
-        <h1 id="name">Carl Marquez</h1>
-        <div id="links" class="section">
+        <div class="section centered-content">
+            <h1 id="name">Carl Marquez</h1>
             <a href="https://github.com/cmqten">Github</a>
             &nbsp;
             <a href="https://www.linkedin.com/in/carlmarquez/">LinkedIn</a>
         </div>
 
-        <div class="about section">
-            <h2 id="about_header" class="header">About Me</h2>
+        <div class="section">
+            <h2 id="about-header" class="header">About Me</h2>
             <p>
                 I am a 3rd year Computer Science student and teaching assistant
                 at the University of Toronto, Mississauga campus. My interest
@@ -29,8 +30,8 @@
             </p>
         </div>
 
-        <div class="interests section">
-            <h2 id="interests_header" class="header">Hobbies and Interests</h2>
+        <div class="section">
+            <h2 id="interests-header" class="header">Hobbies and Interests</h2>
             <ul>
                 <li>Activities : Biking</li>
                 <li>Food : Burrito, Korean BBQ, Poutine, Samosa, Sushi</li>
@@ -40,8 +41,8 @@
             </ul>
         </div>
 
-        <div class="projects section">
-            <h2 id="projects_header" class="header">Projects</h2>
+        <div class="section">
+            <h2 id="projects-header" class="header">Projects</h2>
             <ul>
                 <li>
                     <a href="https://github.com/cmqten/crp16">CRP16</a> :
@@ -65,8 +66,8 @@
             </ul>
         </div>
 
-        <div class="ta section">
-            <h2 id="ta_header" class="header">Teaching Assistant Work</h2>
+        <div class="section">
+            <h2 id="ta-header" class="header">Teaching Assistant Work</h2>
             <p>
                 As mentioned above, I also work as a teaching assistant on top
                 of taking classes. The following are the classes for which I
@@ -80,8 +81,13 @@
             </ul>
         </div>
 
-        <div class="funstuff section">
-            <h2 id="funstuff_header" class="header">Fun Stuff</h2>
+        <!--
+        <div class="section">
+            <h2 id="funstuff-header" class="header">Fun Stuff</h2>
+        </div>
+        -->
+        <div class="section centered-content">
+            <br/></br>Last updated : 2017-02-20
         </div>
     </body>
 </html>
