fixed <br/> end tag

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
         </div>
         -->
         <div class="section centered-content">
-            <br/></br>Last updated : 2017-02-20
+            <br/><br/>Last updated : 2017-02-20
         </div>
     </body>
 </html>
