--- a/index.html
+++ b/index.html
@@ -18,26 +18,31 @@
         <div class="section">
             <h2 id="about-header" class="header">About Me</h2>
             <p>
-                I am a 3rd year Computer Science student and teaching assistant
-                at the University of Toronto, Mississauga campus. My interest
-                lies in computer systems, mainly processor architecture,
-                operating systems, and parallel programming.
-                <br/><br/>
-                I am currently taking classes in software engineering and web
-                programming, and I will be using this website to practice the
-                things that I will be learning in both classes this semester.
-                The website will look wonky, but please bear with me.
+                I am currently an intern at AMD for Central DFX, and an 
+                incoming 4th year Computer Science student at the University of 
+                Toronto, Mississauga campus. My interests include computer 
+                hardware, and systems software.
             </p>
         </div>
 
         <div class="section">
             <h2 id="interests-header" class="header">Hobbies and Interests</h2>
             <ul>
-                <li>Activities : Biking</li>
-                <li>Food : Burrito, Korean BBQ, Poutine, Samosa, Sushi</li>
-                <li>Music : K-pop, J-pop, Classic Rock, Modern Pop</li>
-                <li>Video Games : GTA San Andreas, Kerbal Space Program,
-                    TIS-100</li>
+                <li>Activities : Biking, Swimming</li>
+                <li>
+                    Food : Burrito, Fried Chicken, Korean BBQ, Poutine, Samosa, 
+                    Sushi
+                </li>
+                <li>
+                    Music :
+                    <a href="https://youtu.be/bbUehF1HULU">J-pop</a>, 
+                    <a href="https://youtu.be/48OAPYnpiL8">more J-pop</a>,
+                    K-pop, Classic Rock
+                </li>
+                <li>
+                    Video Games : GTA San Andreas, Kerbal Space Program,
+                    The Sims 3, TIS-100
+                </li>
             </ul>
         </div>
 
@@ -52,14 +57,16 @@
 
                 <li>
                     <a href="https://github.com/cmqten/electromagnet-crane-toy">
-                        Electromagnet Crane Toy</a> :
+                        Electromagnet Crane Toy
+                    </a> :
                     A small electromagnet crane created with an Arduino Uno.
                     Uses a PS3 controller for control.
                 </li>
 
                 <li>
                     <a href="https://github.com/cmqten/coolpenguin">
-                        Penguin Plains</a> :
+                        Penguin Plains
+                    </a> :
                     A game that involves shooting penguins (in a friendly way)
                     with fish or ice cream. Written in C++.
                 </li>
@@ -69,9 +76,8 @@
         <div class="section">
             <h2 id="ta-header" class="header">Teaching Assistant Work</h2>
             <p>
-                As mentioned above, I also work as a teaching assistant on top
-                of taking classes. The following are the classes for which I
-                have worked or currently working as a teaching assistant.
+                The following are classes for which I have worked or currently 
+                working as a teaching assistant.
             </p>
 
             <ul>
@@ -86,8 +92,9 @@
             <h2 id="funstuff-header" class="header">Fun Stuff</h2>
         </div>
         -->
+
         <div class="section centered-content">
-            <br/><br/>Last updated : 2017-02-20
+            <br/><br/>Last updated : 2018-12-23
         </div>
     </body>
 </html>
