--- a/index.html
+++ b/index.html
@@ -18,10 +18,8 @@
         <div class="section">
             <h2 id="about-header" class="header">About Me</h2>
             <p>
-                I am currently an intern at AMD for Central DFX, and an 
-                incoming 4th year Computer Science student at the University of 
-                Toronto, Mississauga campus. My interests include computer 
-                hardware, and systems software.
+                I am currently a 4th year Computer Science student at the 
+                University of Toronto, Mississauga campus.
             </p>
         </div>
 
@@ -30,18 +28,17 @@
             <ul>
                 <li>Activities : Biking, Swimming</li>
                 <li>
-                    Food : Burrito, Fried Chicken, Korean BBQ, Poutine, Samosa, 
-                    Sushi
+                    Food : Burrito, Fried Chicken, Korean BBQ, Samosa, Sushi
                 </li>
                 <li>
                     Music :
                     <a href="https://youtu.be/bbUehF1HULU">J-pop</a>, 
                     <a href="https://youtu.be/48OAPYnpiL8">more J-pop</a>,
-                    K-pop, Classic Rock
+                    Classic Rock
                 </li>
                 <li>
-                    Video Games : GTA San Andreas, Kerbal Space Program,
-                    The Sims 3, TIS-100
+                    Video Games : Dungeon Warfare, GTA San Andreas, 
+                    Kingdoms and Castles, Pummel Party, The Sims 3
                 </li>
             </ul>
         </div>
@@ -81,9 +78,11 @@
             </p>
 
             <ul>
+                <li>CSC148 - Introduction to Computer Science, UTM Winter 2020</li>
+                <li>CSC258 - Computer Organization, UTM Winter 2020</li>
+                <li>CSC367 - Parallel Programming, UTM Fall 2019</li>
                 <li>CSC258 - Computer Organization, UTM Winter 2018</li>
-                <li>CSC108 - Introduction to Computer Programming,
-                    UTM Fall 2017</li>
+                <li>CSC108 - Introduction to Computer Programming, UTM Fall 2017</li>
             </ul>
         </div>
 
@@ -94,7 +93,7 @@
         -->
 
         <div class="section centered-content">
-            <br/><br/>Last updated : 2018-12-23
+            <br/><br/>Last updated : 2020-02-19
         </div>
     </body>
 </html>
