--- a/index.html
+++ b/index.html
@@ -7,20 +7,24 @@
     <title>Carl's Homepage</title>
 </head>
 
-<body class="bold" style="background-image: url(./gifs/water.gif);"> 
+<body class="bold" style="background-image: url(gifs/water.gif);"> 
     <div class="section">
-        <img src="./gifs/welcome.gif">
-        <h1 id="name"><img src="./gifs/dance.gif"> Carl's <img src="./gifs/dance.gif"></h1>
-        <marquee scroll="left" behavior="alternate" class="xx-large"><img src="./gifs/star.gif"> Homepage <img src="./gifs/star.gif"></marquee>
+        <img src="gifs/welcome.gif">
+        <h1 id="name"><img src="gifs/dance.gif"> Carl's <img src="gifs/dance.gif"></h1>
+        <marquee scroll="left" behavior="alternate" class="xx-large"><img src="gifs/star.gif"> Homepage <img src="gifs/star.gif"></marquee>
         <br/><br/>
-        <img src="./gifs/computer.gif" width="20px"> <a href="https://github.com/cmqten">Github</a>
-        &nbsp;
-        <img src="./gifs/atwork.gif" width="20px"> <a href="https://www.linkedin.com/in/carlmarquez/">LinkedIn</a>    
+        <!--<marquee scroll="right">-->
+        <div class="large">
+            <img src="gifs/computer.gif" width="20px"> <a href="https://github.com/cmqten">Github</a>
+            &nbsp;
+            <img src="gifs/atwork.gif" width="20px"> <a href="https://www.linkedin.com/in/carlmarquez/">LinkedIn</a>    
+        </div>
+        <!--</marquee>-->
     </div>
 
     <br/>
 
-    <div class="section bordered" style="color: darkblue; background-color: cyan;">
+    <div class="section bordered" style="color: darkcyan; background-color: cyan;">
         <div class="black">
             <h2 id="about-header">About me</h2>
             <p class="centered large">
@@ -34,10 +38,11 @@
 
     <div class="section bordered" style="color: green; background-color: lightgreen;">
         <div class="black">
-            <h2 id="interests-header">What do I find interesting?</h2>
+            <h2 id="interests-header">What do I find interesting<img src="gifs/question.gif" height="16px"></h2>
             <ul class="left large">
                 <li>Alphabetically sorting lists.</li>
                 <li>Biking. Sometimes, for 6 hours while carrying groceries across cities.</li>
+                <li>Hella fly websites from the 90's and early 2000's.</li>
                 <li>
                     <a href="https://youtu.be/bbUehF1HULU">J-rock</a>, 
                     <a href="https://youtu.be/48OAPYnpiL8">more J-rock</a>,
@@ -52,20 +57,29 @@
 
     <br/>
 
-    <div class="section bordered" style="color: purple; background-color: violet;">
+    <div class="section bordered" style="color: darkviolet; background-color: violet;">
         <div class="black">
             <h2 id="funstuff-header">What you might find interesting</h2>
             <ul class="left large">
                 <li>
-                    <img src="./gifs/new.gif">
-                    I create mods for Kingdoms and Castles on the
+                    <img src="gifs/tack.gif" height="12px"> I create mods for Kingdoms and Castles
+                    on the
                     <a href="https://steamcommunity.com/id/cmjten10/myworkshopfiles/">Steam Workshop</a>. 
                     Source code in my Github.
                 </li>
                 <li>
-                    I once created a script to automate my resume and cover letter. I don't have the 
-                    source anymore, and would have to find or recreate it. It got me a job though, 
-                    which eventually led to my current one.
+                    <img src="gifs/new.gif">Play <a href="https://ski.ihoc.net/">SkiFree</a> and 
+                    have the abominable monster ruin your weekends, just like it did when I was a 
+                    kid.
+                </li>
+                <li>
+                    <img src="gifs/new.gif"><a href="http://hakka77.ca/">Hakka 77</a> is the best 
+                    Chinese restaurant in Richmond Hill.
+                </li>
+                <li>
+                    <img src="gifs/new.gif"><a href="https://www.eileenscheesecake.com/">Eileen's 
+                    Special Cheesecake</a> is the best cheesecake store in New York.
+                    <a href="images/cheesecake.jpg">This</a> was hella <img src="gifs/tasty.gif">.
                 </li>
             </ul>
         </div>
@@ -73,7 +87,7 @@
 
     <br/>
 
-    <div class="section bordered" style="color: orangered; background-color: lightsalmon;">
+    <div class="section bordered" style="color: salmon; background-color: lightsalmon;">
         <div class="black">
             <h2 id="side-header">The things I do on the side</h2>
             <p class="centered large">
@@ -84,13 +98,15 @@
 
     <div class="centered black">
         <br/><br/>
-        <img src="./gifs/hammercomputer.gif">
+        <img src="gifs/hammercomputer.gif">
         <br/><br/>
         Visitor counter: 
         <br/>
-        <img src="./gifs/errorcounter.gif">
+        <img src="gifs/errorcounter.gif">
         <br/><br/>
-        Last updated : 2020-05-12
+        <img src="gifs/netscape.gif"><img src="gifs/notepad.gif">
+        <br/><br/>
+        Last updated : <del>1997</del> 2020-05-13
     </div>
 </body>
 </html>
