Changed section headers

--- a/index.html
+++ b/index.html
@@ -26,7 +26,11 @@
 
     <div class="section bordered" style="color: darkcyan; background-color: cyan;">
         <div class="black">
-            <h2 id="about-header">About me</h2>
+            <h2 id="about-header">
+                <img src="gifs/question.gif" height="16px">
+                What do I do
+                <img src="gifs/question.gif" height="16px">
+            </h2>
             <p class="centered large">
                 I take naps a lot. I learn and do things I find interesting. I also do silicon 
                 design engineering on the side. Sometimes, I do all three at once.
@@ -38,19 +42,23 @@
 
     <div class="section bordered" style="color: green; background-color: lightgreen;">
         <div class="black">
-            <h2 id="interests-header">What do I find interesting<img src="gifs/question.gif" height="16px"></h2>
+            <h2 id="interests-header">
+                <img src="gifs/question.gif" height="16px">
+                What do I find interesting
+                <img src="gifs/question.gif" height="16px">
+            </h2>
             <ul class="left large">
                 <li>Alphabetically sorting lists.</li>
                 <li>Biking. Sometimes, for 6 hours while carrying groceries across cities.</li>
                 <li>Hella fly websites from the 90's and early 2000's.</li>
-                <li>
+                <!--<li>
                     <a href="https://youtu.be/bbUehF1HULU">J-rock</a>, 
                     <a href="https://youtu.be/48OAPYnpiL8">more J-rock</a>,
                     and 
                     <a href="https://youtu.be/QN3kL1DMyBs">video game soundtracks</a>.
-                </li>
+                </li>-->
                 <li>Swimming.</li>
-                <li>Video games where I can sabotage my friends instead of trying to win.</li>
+                <!--<li>Video games where I can sabotage my friends instead of trying to win.</li>-->
             </ul>
         </div>
     </div>
@@ -59,7 +67,11 @@
 
     <div class="section bordered" style="color: darkviolet; background-color: violet;">
         <div class="black">
-            <h2 id="funstuff-header">What you might find interesting</h2>
+            <h2 id="funstuff-header">
+                <img src="gifs/question.gif" height="16px">
+                What might you find interesting
+                <img src="gifs/question.gif" height="16px">
+            </h2>
             <ul class="left large">
                 <li>
                     <img src="gifs/tack.gif" height="12px"> I create mods for Kingdoms and Castles
@@ -69,8 +81,8 @@
                 </li>
                 <li>
                     <img src="gifs/new.gif">Play <a href="https://ski.ihoc.net/">SkiFree</a> and 
-                    have the abominable monster ruin your weekends, just like it did when I was a 
-                    kid.
+                    have the abominable snow monster ruin your weekends, just like it did when I 
+                    was a kid.
                 </li>
                 <li>
                     <img src="gifs/new.gif"><a href="http://hakka77.ca/">Hakka 77</a> is the best 
@@ -89,7 +101,11 @@
 
     <div class="section bordered" style="color: salmon; background-color: lightsalmon;">
         <div class="black">
-            <h2 id="side-header">The things I do on the side</h2>
+            <h2 id="side-header">
+                <img src="gifs/question.gif" height="16px">
+                What do I do on the side
+                <img src="gifs/question.gif" height="16px">
+            </h2>
             <p class="centered large">
                 See my LinkedIn profile.
             </p>
