Added no css version

--- a/index.html
+++ b/index.html
@@ -51,14 +51,13 @@
                 <li>Alphabetically sorting lists.</li>
                 <li>Biking. Sometimes, for 6 hours while carrying groceries across cities.</li>
                 <li>Hella fly websites from the 90's and early 2000's.</li>
-                <!--<li>
-                    <a href="https://youtu.be/bbUehF1HULU">J-rock</a>, 
-                    <a href="https://youtu.be/48OAPYnpiL8">more J-rock</a>,
-                    and 
-                    <a href="https://youtu.be/QN3kL1DMyBs">video game soundtracks</a>.
-                </li>-->
+                <li>
+                    Japanese rock songs about 
+                    <a href="https://youtu.be/ByvlZ7s60h4">pizza</a> and 
+                    <a href="https://youtu.be/798yCee_6mA">ramen</a>.
+                </li>
                 <li>Swimming.</li>
-                <!--<li>Video games where I can sabotage my friends instead of trying to win.</li>-->
+                <li>Video games where I can sabotage my friends instead of trying to win.</li>
             </ul>
         </div>
     </div>
