--- a/index.html
+++ b/index.html
@@ -24,6 +24,24 @@
 
     <br/>
 
+    <div class="section bordered" style="color: darkgoldenrod; background-color:goldenrod;">
+        <div class="black">
+            <h2 id="why-header">
+                <img src="gifs/question.gif" height="16px">
+                Why
+                <img src="gifs/question.gif" height="16px">
+            </h2>
+            <p class="centered large">
+                Everyone has the same old clean, minimalist, professional-looking website. Boring! 
+                What happened to the 90's and early 2000's when people expressed themselves with 
+                low-quality gifs, moving text, and custom cursors, all 
+                <a href="nocss.html">without CSS</a>? We need to go back to that.
+            </p>
+        </div>
+    </div>
+
+    <br/>
+
     <div class="section bordered" style="color: darkcyan; background-color: cyan;">
         <div class="black">
             <h2 id="about-header">
@@ -121,7 +139,7 @@
         <br/><br/>
         <img src="gifs/netscape.gif"><img src="gifs/notepad.gif">
         <br/><br/>
-        Last updated : <del>1997</del> 2020-05-13
+        Last updated : <del>1997</del> 2020-05-14
     </div>
 </body>
 </html>
