--- a/nocss.html
+++ b/nocss.html
@@ -14,7 +14,7 @@
                 <h1><img src="gifs/dance.gif"> Carl's <img src="gifs/dance.gif"></h1>
                 <marquee scroll="left" behavior="alternate">
                     <img src="gifs/star.gif">
-                    <font size="+3">No CSS, full-on 90's Homepage</font>
+                    <font size="+3">Homepage</font>
                     <img src="gifs/star.gif">
                 </marquee>
 
@@ -29,6 +29,27 @@
                 </font>
                 <!--</marquee>-->
             </center>
+        </td></tr>
+    </table>
+
+    <br/>
+
+    <table width="50%" cellpadding="0" cellspacing="0" border="2" bordercolor="darkgoldenrod">
+        <tr><td bgcolor="goldenrod">
+            <center>
+                <h2 id="why-header">
+                    <img src="gifs/question.gif" height="16px">
+                    Why
+                    <img src="gifs/question.gif" height="16px">
+                </h2>
+            </center>
+            <p>
+                <center><font size="+1.5">
+                    The <a href="index.html">original site</a> cheats a little with CSS so people
+                    living in 2020 can see it properly, but this has COMPLETELY ZERO CSS for the 
+                    full experience. 
+                </font></center>
+            </p>
         </td></tr>
     </table>
 
@@ -149,7 +170,7 @@
                 <br/><br/>
                 <img src="gifs/netscape.gif"><img src="gifs/notepad.gif">
                 <br/><br/>
-                Last updated : <del>1997</del> 2020-05-13
+                Last updated : <del>1997</del> 2020-05-14
             </center>
         </td></tr>
     </table>
