Added netscape video

--- a/nocss.html
+++ b/nocss.html
@@ -12,13 +12,13 @@
             <center>
                 <img src="gifs/welcome.gif">
                 <h1><img src="gifs/dance.gif"> Carl's <img src="gifs/dance.gif"></h1>
-                <marquee scroll="left" behavior="alternate">
+                <blink><marquee scroll="left" behavior="alternate">
                     <img src="gifs/star.gif">
                     <font size="+3">Homepage</font>
                     <img src="gifs/star.gif">
-                </marquee>
+                </marquee></blink>
 
-                <br/><br/>
+                <br><br>
                 <!--<marquee scroll="right">-->
                 <font size="+1.5">
                     <img src="gifs/computer.gif" width="20px"> 
@@ -32,7 +32,7 @@
         </td></tr>
     </table>
 
-    <br/>
+    <br>
 
     <table width="50%" cellpadding="0" cellspacing="0" border="2" bordercolor="darkgoldenrod">
         <tr><td bgcolor="goldenrod">
@@ -47,13 +47,14 @@
                 <center><font size="+1.5">
                     The <a href="index.html">original site</a> cheats a little with CSS so people
                     living in 2020 can see it properly, but this has COMPLETELY ZERO CSS for the 
-                    full experience. 
+                    full experience. Also looks pretty good on Netscape 4.04. 
+                    <a href="https://www.youtube.com/watch?v=wrCVnIsoTZg">Seriously</a>. 
                 </font></center>
             </p>
         </td></tr>
     </table>
 
-    <br/>
+    <br>
 
     <table width="50%" cellpadding="0" cellspacing="0" border="2" bordercolor="darkcyan">
         <tr><td bgcolor="cyan">
@@ -73,7 +74,7 @@
         </td></tr>
     </table>
 
-    <br/>
+    <br>
 
     <table width="50%" cellpadding="0" cellspacing="0" border="2" bordercolor="green">
         <tr><td bgcolor="lightgreen"> 
@@ -101,7 +102,7 @@
         </td></tr>
     </table>
 
-    <br/>
+    <br>
 
     <table width="50%" cellpadding="0" cellspacing="0" border="2" bordercolor="darkviolet">
         <tr><td bgcolor="violet">
@@ -139,7 +140,7 @@
         </td></tr>
     </table>
 
-    <br/>
+    <br>
 
     <table width="50%" cellpadding="0" cellspacing="0" border="2" bordercolor="salmon">
         <tr><td bgcolor="lightsalmon">
@@ -161,16 +162,16 @@
     <table width="50%" cellpadding="0" cellspacing="0" border="0">
         <tr><td>
             <center>
-                <br/><br/>
+                <br><br>
                 <img src="gifs/hammercomputer.gif">
-                <br/><br/>
+                <br><br>
                 Visitor counter: 
-                <br/>
+                <br>
                 <img src="gifs/errorcounter.gif">
-                <br/><br/>
+                <br><br>
                 <img src="gifs/netscape.gif"><img src="gifs/notepad.gif">
-                <br/><br/>
-                Last updated : <del>1997</del> 2020-05-14
+                <br><br>
+                Last updated : <s>1997</s> 2020-05-14
             </center>
         </td></tr>
     </table>
