Updated video link

--- a/nocss.html
+++ b/nocss.html
@@ -48,7 +48,7 @@
                     The <a href="index.html">original site</a> cheats a little with CSS so people
                     living in 2020 can see it properly, but this has COMPLETELY ZERO CSS for the 
                     full experience. Also looks pretty good on Netscape 4.04. 
-                    <a href="https://www.youtube.com/watch?v=wrCVnIsoTZg">Seriously</a>. 
+                    <a href="https://www.youtube.com/watch?v=lWqstyABaNw">Seriously</a>. 
                 </font></center>
             </p>
         </td></tr>
